<resources>
    <string name="app_name">No Excusas</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_now">Login Now</string>
    <string name="signup">Signup Now</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="hintemail">email</string>
    <string name="hintpassword">password</string>
    <string name="facebook_app_id" translatable="false">862621947465158</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb862621947465158</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="continue_session">Continue Session</string>
    <string name="sign_out">Sign out</string>
    <string name="send_my_password"> Send my password</string>
    <string name="registered_succesfully">Registered Successfully</string>
    <string name="advance">Advance</string>
    <string name="welcome">WELCOME!</string>
    <string name="session">Session</string>
    <string name="profile">Profile</string>
    <string name="nutrition">Nutrition</string>
    <string name="contact">Contact</string>
    <string name="coach">Coaches</string>
    <string name="about_Us">About Us</string>
    <string name="orders">Orders</string>
    <string name="information">Information</string>
    <string name="back">Back</string>
    <string name="title_activity_drawer_home" translatable="false">drawer_home</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="register">Registration</string>
    <string name="error">Error, please review information and try again</string>
    <string name="info_updated">Changes updated</string>
    <string name="update_info">Edit Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="refresh">Refresh</string>
    <string name="home">Home</string>
    <string name="no_changes">No changes were made</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password_length_error">Password must be at least 6 letters</string>
    <string name="firstName">First Name</string>
    <string name="scan_code">(Scan code to start session)</string>
    <string name="qr_code">QR code</string>
    <string name="body_eval">Body Evaluation</string>
    <string name="coming_soon" > Coming Soon!</string>
    <string name="exercise_to_go">Exercises To Go!</string>
    <string name="birthday" >Birth date</string>
    <string name="sport" >Sport</string>
    <string name="study" >Study</string>
    <string name="birthplace">Birth Place</string>
    <string name="body_composition">Information on body composition</string>



    <string name="to_go_description">"EXERCISES TO GO"
🚀By No Excuses" start from where you are, and at the time you want and can. 🚀

🔆 These routines were specially designed for you, if you do not come to the gym, if you are HOME, TRAVEL, WORK, etc; There are no excuses to stop training.
🔆 If you BELIEVE it, YOU CREATE it, and don't just think about trying it, do it.
The exercises that we present to you are two forms: Strength and Cardio. We also have included an Ab routine.
And remember, it all starts with you. </string>


    <string name="strength">Strength</string>
    <string name="carido">Cardio</string>
    <string name="Ab_tut">Ab Routine (with tutorial)</string>
    <string name="Ab_notut">Ab Routine (without tutorial)</string>

    <string name="enter_email">Enter your registered email id</string>
    <string name="instructions_sent">We have sent you instructions to reset your password!</string>
    <string name="error_email">Failed to send reset email!"</string>
    <string name="announcements">Announcements</string>
    <string name="phraseDay">Phrase of the day</string>
    <string name="gymDescribe">Designed to improve the physical fitness of people who want to overcome their performance, combining exercises of weight, strength, coordination and agility.
</string>
    <string name="wappClick">Whatsapp link (Click)</string>
    <string name="facbeookClick" translatable="false">Facebook link (Click)</string>
    <string name="wapp" translatable="false">https://wa.me/59169976156</string>
    <string name="facebook" translatable="false">https://www.facebook.com/noexcusastrainingcenter</string>




    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="bmi">BMI</string>
    <string name="grasa">Fat %</string>
    <string name="muscleper">Muscle</string>
    <string name="kcal">KCAL</string>
    <string name="metaage">Meta Age</string>
    <string name="visfat">Vis Fat</string>



    <!-- profile page body eval -->
    <string name="BMI">Body Mass Index</string>
    <string name="FatPercent">Body Fat</string>
    <string name="visFat">Visceral Fat</string>
    <string name="muscle">Muscle Percentage</string>

    <string name="composition">Conposition</string>
    <string name="date">Date</string>

    <string name="less18">Less than 18.5</string>
    <string name="underweight">Underweight</string>
    <string name="more18">Between 18.5 and 25</string>
    <string name="normal">Normal</string>
    <string name="more25">Between 25 and 30</string>
    <string name="overweight">Overweight</string>
    <string name="more30">30 or more</string>
    <string name="obese">Obese</string>


    <string name="Female">Female</string>
    <string name="Male">Male</string>
    <string name="low">Low</string>
    <string name="elevated">Elevated</string>
    <string name="veryElevated">Very Elevated</string>






    <!-- edit profile image -->
    <string name="editpropic">Edit Profile Picture</string>
    <string name="chooseAction">Choose Action</string>
    <string name="updatingPhoto">Updating Profile Picture</string>
    <string name="cameraPermission"> Please enable camera and storage permission</string>
    <string name="storagePermission"> Please enable storage permission</string>
    <string name="choosefrom">Choose From</string>
    <string name="camera">camera</string>
    <string name="gallery">Gallery</string>
    <string name="imageUpdated">Image Updated...</string>
    <string name="erroruploadimage"> Error Updating Image...</string>
    <string name="photosettings"> Photo settings ></string>





    //reward ads
    <string name="pointsbtn">Earn points by watching video    ⏯</string>


    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools" translatable="false">Tools</string>
    <string name="menu_share" translatable="false">Share</string>
    <string name="menu_send" translatable="false">Send</string>
    <string name="chat">Chat</string>
    <string name="motivation_frase">Motivational Phrase</string>
    <string name="information_data">Membership information</string>
    <!-- admob -->

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9125010107042455/1102015253</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>


</resources>
