<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_orders"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_nutrition"
            android:icon="@drawable/ic_nutrition"
            android:title="@string/nutrition" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_coach"
            android:icon="@drawable/ic_coach"
            android:title="@string/coach" />
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/ic_information"
            android:title="@string/information" />
    </group>

</menu>