<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/grassblur"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/toolbar_bg"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">



        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold"
            />
    </androidx.appcompat.widget.Toolbar>






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical">




        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="29dp"
            android:indeterminate="false"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/username"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etUserEmail"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="50dp"
            android:background="@drawable/et_bg"
            android:ems="10"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hintemail"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginLeft="50dp"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-light"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etUserPass"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="50dp"
            android:textSize="15sp"
            android:textColor="#ffffff"
            android:fontFamily="sans-serif-light"
            android:ems="10"
            android:hint="@string/hintpassword"
            android:paddingLeft="115dp"
            android:paddingStart="15dp"
            android:background="@drawable/et_bg"
            android:inputType="textPassword"
            android:textColorHint="#ffffff"
            android:textStyle="bold"/>


        <Button
            android:id="@+id/btnUserLogin"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:text="@string/login_now"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="25sp" />



    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="288dp"
        android:layout_height="166dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/noexlogo" />
</LinearLayout>

