<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/forgot_password_bgc"
    tools:context=".ForgotPasswordActivity">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/toolbar_bg"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


    <TextView
        android:id="@+id/tvforgotpw"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="sans-serif-medium"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        />
    </androidx.appcompat.widget.Toolbar>



    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="29dp"
        android:indeterminate="false"
        android:visibility="gone" />

    <EditText
        android:id="@+id/etForgotEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:textSize="15sp"
        android:textColor="#ffffff"
        android:fontFamily="sans-serif-light"
        android:ems="10"
        android:hint="@string/hintemail"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:background="@drawable/et_bg"
        android:inputType="textEmailAddress"
        android:textColorHint="#ffffff" />

    <Button
        android:id="@+id/btnForgotPass"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg"
        android:textColor="#ffffff"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:text="@string/send_my_password"/>


    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_bg"
        android:text="@string/back"
        android:fontFamily="sans-serif-medium"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:textSize="16sp"/>




</LinearLayout>