<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F1EDED"
    tools:context=".AboutUsActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/layoutHead"
        android:layout_height="wrap_content">



        <RelativeLayout
            android:id="@+id/rellaygrass"
            android:layout_width="match_parent"
            android:background="@drawable/green_grasspng"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/nameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:padding="20dp"
                android:text="@string/gymDescribe"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />




        </RelativeLayout>

    </ScrollView>




    <ScrollView
        android:layout_marginTop="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/rellaybottom"
            android:orientation="vertical"
            android:background="@drawable/statbcg4re"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp" >

            <TextView
                android:id="@+id/clickwapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"
                android:text="@string/wappClick"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/colorBlack"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"
                android:text="@string/wapp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/colorBlack"
                android:textColorLink="@color/colorWhite"
                android:textStyle="bold">

            </TextView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"
                android:text="@string/facbeookClick"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#3b5998"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/clickfb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"
                android:text="@string/facebook"
                android:gravity="center"
                android:textSize="20sp"
                android:textColorLink="@color/colorWhite"
                android:textStyle="bold">

            </TextView>



<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:text="Cargando Fotos..."
    android:textSize="15dp"
    android:textAlignment="center"/>

            <ImageView
                android:id="@+id/schedulePhotoIV"
                android:contentDescription="@string/app_name"
               android:layout_marginTop="20dp"
               android:layout_width="match_parent"
               android:layout_height="700dp"
                android:src="@drawable/ic_cloud">

           </ImageView>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorBlack" />

            <ImageView
                android:id="@+id/pricesPhotoIV"
                android:contentDescription="@string/app_name"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="700dp"
                android:src="@drawable/ic_cloud">
            </ImageView>



            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorBlack" />

            <ImageView
                android:id="@+id/planbBigIV"
                android:contentDescription="@string/app_name"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="700dp"
                android:src="@drawable/ic_cloud">
            </ImageView>


            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorBlack" />


            <ImageView
                android:id="@+id/locationPhotoIV"
                android:contentDescription="@string/app_name"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="700dp"
                android:src="@drawable/ic_cloud">
            </ImageView>

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-9125010107042455/7389117191">
            </com.google.android.gms.ads.AdView>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
