<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homepage_green"
    android:orientation="vertical"

    tools:context=".ProfileActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome"
        android:textColor="#ffffff"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#CD9A21"
        android:layout_gravity="center"
        android:textSize="30sp" />


    <Button
        android:id="@+id/btnToHome"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:text="@string/advance"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="25sp" />





    <com.wajahatkarim3.easyflipview.EasyFlipView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:flipOnTouch="true"
        app:flipEnabled="true"
        app:flipDuration="600"
        android:layout_marginTop="60dp"
        app:flipFrom="right"
        app:flipType="horizontal"
        app:autoFlipBack="true"
        app:autoFlipBackTime="1000"
        >

        <!-- Back Layout Goes Here -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/logoflipped"/>

        <!-- Front Layout Goes Here -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/noexlogo"/>

    </com.wajahatkarim3.easyflipview.EasyFlipView>








    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:text="@string/sign_out"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="25sp" />





</LinearLayout>

